[gd_scene load_steps=6 format=3 uid="uid://c7xmqpoishraa"]

[ext_resource type="Script" path="res://Objects/POI/challenge_shrine.gd" id="1_shrine"]
[ext_resource type="Texture2D" uid="uid://shrine_main" path="res://Textures/poi/challenge_shrine.png" id="2_sprite"]
[ext_resource type="Texture2D" uid="uid://shrine_glow" path="res://Textures/poi/shrine_glow.png" id="3_glow"]
[ext_resource type="Texture2D" uid="uid://zone_circle" path="res://Textures/poi/zone_circle.png" id="4_zone"]

[sub_resource type="CircleShape2D" id="CircleShape2D_activation"]
radius = 50.0

[node name="ChallengeShrine" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_shrine")

[node name="GlowSprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.9, 1, 0.6)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_glow")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_sprite")

[node name="ZoneIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.3, 1, 0.3, 0.4)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_zone")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_activation")

[node name="ExpirationTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="ChallengeLabel" type="Label" parent="."]
visible = false
offset_left = -80.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = -70.0
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -60.0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 45.0
value = 0.0
show_percentage = false

[node name="ActivationSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="CompletionSound" type="AudioStreamPlayer" parent="."]
volume_db = -3.0
